# gdbot

./: Cargo.toml  README.md  commands.toml
src/: commands.rs  handler.rs  interaction.rs  main.rs
src/commands/: level.rs  prelude.rs  search_user.rs  user.rs
src/util/: level.rs  user.rs
